--- a/src/App.less
+++ b/src/App.less
@@ -1,4 +1,11 @@
 @import '~antd/dist/antd.css';
+
+// @import './theme/colors.less';
+
+
+@primary-color: red;
+
 .App {
   text-align: center;
 }
+
